<resources>
    <string name="app_name">UAIS</string>
    <string name="prompt_uname">Username</string>
    <string name="prompt_pwd">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_uname">This username is invalid</string>
    <string name="error_invalid_password">Password should be atleast eight character</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="a_new_student_lecturer">A new Student</string>
    <string name="logo_image">logo image</string>
    <string name="prompt_fname">First Name</string>
    <string name="prompt_mname">Middle Name</string>
    <string name="prompt_sname">Surname</string>
    <string name="prompt_phoneno">Phone Number</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_male">Male</string>
    <string name="prompt_female">Female</string>
    <string name="prompt_nationality">Nationality</string>
    <string name="prompt_repwd">Retype Password</string>
    <string name="action_register">Register</string>
    <string name="user_registration">User Registration</string>
    <string name="error_invalid_pwd_match">Passwords should match</string>
    <string name="error_name_invalid">Alphabetic letters and no space</string>
    <string name="error_phone_invalid">Valid format, example +255 XXX XXXXXX</string>
    <string name="error_email_invalid">Valid format, example XXX@domain.com</string>
    <string name="error_nat_invalid">Alphabetic letters only</string>
    <string name="ok">OK</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="image_photo">image_photo</string>
    <string name="person_name">FirstName Surname</string>
    <string name="academics_management">ACADEMICS MANAGEMENT</string>
    <string name="academic_materials">Academic Materials</string>
    <string name="message">Message</string>
    <string name="profile_settings">PROFILE SETTINGS</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_academic">Academic Materials</string>
    <string name="tab_1">Academic Downloads</string>
    <string name="tab_2">View Assignment</string>
    <string name="tab_3">Send Assignment</string>
    <string name="reg_success">Success</string>
    <string name="reg_success_sms">Registered Successfully. You can login now</string>
    <string name="no_connection">No Internet Connection</string>
    <string name="no_connection_sms">Sorry, It seems no connection. Please switch on either cellular data or Wifi. And Restart Application</string>
    <string name="not_registered">Not Registered</string>
    <string name="not_registered_sms">Sorry, Not registered. Please register, use a link "A new Student" to register.</string>
    <string name="not_inSystem">Not in System</string>
    <string name="not_inSystem_sms">Sorry, You are not in system. Please consult system admin at IT office.</string>
    <string name="db_error">Registration Fail</string>
    <string name="db_error_sms">Sorry something went wrong. Please try to register again</string>
    <string name="info">Information</string>
    <string name="info_lecturer">This mobile App is for student only, Lecturer should use Web App</string>
    <string name="info_admin">This mobile App is for student only, Admin should use Web App</string>
    <string name="choose_file">Choose</string>
    <string name="upload_file">Upload</string>
    <string name="prompt_selection">Select a Module</string>
    <string name="no_fileMod">Error</string>
    <string name="no_fileMod_sms">No file Chosen or Module. Please choose a module and file(s)</string>
    <string name="notification_icon_at_notification_bar_for_uploading_progress">notification icon at notification bar for uploading progress</string>
    <string name="notification_ticker">Uploading...</string>
    <string name="to">To</string>
    <string name="send_compose">Send</string>
    <string name="send_button">send button</string>
    <string name="compose_message">Compose message</string>
    <string name="subject">Subject</string>
    <string name="reply_button">reply button</string>
    <string name="reply">Reply</string>
    <string name="childfragment_compose_error">Error</string>
    <string name="childfragment_compose_errorsms">Please fill all fields</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="profile_photo">profile photo</string>
    <string name="cover_photo">cover photo</string>
    <string name="full_name">Full Name</string>
    <string name="firstname_middlename_surname">FirstName MiddleName Surname</string>
    <string name="phone_number">Phone Number</string>
    <string name="_255xxx_xxxxxx">+255XXX XXXXXX</string>
    <string name="e_mail">E-mail</string>
    <string name="example_domain_com">example@domain.com</string>
    <string name="gender">Gender</string>
    <string name="male_female">Male/Female</string>
    <string name="nationality">Nationality</string>
    <string name="tanzanian">Tanzanian</string>
    <string name="username">Username</string>
    <string name="example_username">example username</string>
    <string name="password">Password</string>
    <string name="password_profile">password</string>
    <string name="retype_password">Retype Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="success">Success</string>
    <string name="profile_success_change_sms">Changes have been successfully saved</string>
    <string name="compose_button">compose button</string>
    <string name="sender_image_on_inbox">sender image on inbox</string>
    <string name="fname_sname">fname sname</string>
    <string name="subject_of_sms">subject of sms</string>
    <string name="time">time</string>
</resources>