<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/nsv"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.uais.uais.profile.ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <!-- loading progress spinner -->
    <RelativeLayout
        android:id="@+id/loading_bg_spinner_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone">  <!-- android:visibility="gone"-->
        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/relative_name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/et_states"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp">
            <TextView
                android:id="@+id/tv_fullname"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:text="@string/full_name"/>
            <TextView
                android:id="@+id/fullname"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:text="@string/firstname_middlename_surname"
                android:layout_below="@id/tv_fullname"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_below="@id/relative_name"
            android:id="@+id/relative_phone"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/et_states"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp">
            <TextView
                android:id="@+id/tv_phone"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:text="@string/phone_number"/>
            <EditText
                android:id="@+id/phone_number"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:hint="@string/_255xxx_xxxxxx"
                android:inputType="phone"
                android:layout_below="@id/tv_phone"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_below="@id/relative_phone"
            android:id="@+id/relative_email"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/et_states"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp">
            <TextView
                android:id="@+id/tv_email"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:text="@string/e_mail"/>
            <EditText
                android:id="@+id/email"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:hint="@string/example_domain_com"
                android:inputType="textEmailAddress"
                android:layout_below="@id/tv_email"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_below="@id/relative_email"
            android:id="@+id/relative_gender"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/et_states"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp">
            <TextView
                android:id="@+id/tv_gender"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:text="@string/gender"/>
            <TextView
                android:id="@+id/gender"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:text="@string/male_female"
                android:layout_below="@id/tv_gender"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_below="@id/relative_gender"
            android:id="@+id/relative_nat"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/et_states"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp">
            <TextView
                android:id="@+id/tv_nat"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:text="@string/nationality"/>
            <TextView
                android:id="@+id/nat"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:text="@string/tanzanian"
                android:layout_below="@id/tv_nat"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_below="@id/relative_nat"
            android:id="@+id/relative_uname"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/et_states"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp">
            <TextView
                android:id="@+id/tv_uname"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:text="@string/username"/>
            <EditText
                android:id="@+id/uname"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:hint="@string/example_username"
                android:inputType="text"
                android:layout_below="@id/tv_uname"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_below="@id/relative_uname"
            android:id="@+id/relative_pwd"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/et_states"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp">
            <TextView
                android:id="@+id/tv_pwd"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:text="@string/password"/>
            <EditText
                android:id="@+id/pwd"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:inputType="textPassword"
                android:layout_below="@id/tv_pwd"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_below="@id/relative_pwd"
            android:id="@+id/relative_repwd"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/et_states"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp">
            <TextView
                android:id="@+id/tv_repwd"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:text="@string/retype_password"/>
            <EditText
                android:id="@+id/repwd"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:inputType="textPassword"
                android:layout_below="@id/tv_repwd"/>
        </RelativeLayout>
        <Button
            android:layout_below="@id/relative_repwd"
            android:id="@+id/save_changes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@drawable/btn_states"
            android:text="@string/save_changes"
            android:textColor="@color/color_white"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
