<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/color_bg_login"
    tools:context="com.uais.uais.Registration"
    android:fitsSystemWindows="true">

    <!-- registration progress -->
    <RelativeLayout
        android:id="@+id/register_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/register_sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:padding="10dp"
            android:background="@drawable/lo_bg"
            android:layout_gravity="top|bottom"
            android:orientation="vertical"
            android:layout_marginTop="6dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_registration"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"/>

            <EditText
                android:id="@+id/fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawableRight="@mipmap/ic_person_black_18dp"
                android:background="@drawable/et_states"
                android:padding="10dp"
                android:hint="@string/prompt_fname"
                android:textColorHint="@color/color_hint"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@color/color_black_light"
                tools:ignore="RtlHardcoded" />
            <EditText
                android:id="@+id/mname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawableRight="@mipmap/ic_person_black_18dp"
                android:background="@drawable/et_states"
                android:padding="10dp"
                android:hint="@string/prompt_mname"
                android:textColorHint="@color/color_hint"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@color/color_black_light"
                tools:ignore="RtlHardcoded" />
            <EditText
                android:id="@+id/sname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawableRight="@mipmap/ic_person_black_18dp"
                android:background="@drawable/et_states"
                android:padding="10dp"
                android:hint="@string/prompt_sname"
                android:textColorHint="@color/color_hint"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@color/color_black_light"
                tools:ignore="RtlHardcoded" />
            <EditText
                android:id="@+id/phoneno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawableRight="@mipmap/ic_phone_black_18dp"
                android:background="@drawable/et_states"
                android:padding="10dp"
                android:hint="@string/prompt_phoneno"
                android:textColorHint="@color/color_hint"
                android:inputType="phone"
                android:maxLines="1"
                android:textColor="@color/color_black_light"
                tools:ignore="RtlHardcoded" />
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawableRight="@mipmap/ic_mail_black_18dp"
                android:background="@drawable/et_states"
                android:padding="10dp"
                android:hint="@string/prompt_email"
                android:textColorHint="@color/color_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/color_black_light"
                tools:ignore="RtlHardcoded" />
            <RadioGroup
                android:id="@+id/gender"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="horizontal">
               <RadioButton
                   android:id="@+id/male"
                   android:layout_height="wrap_content"
                   android:layout_width="wrap_content"
                   android:text="@string/prompt_male"
                   android:checked="true"
                   android:textColor="@color/color_hint"/>
                <RadioButton
                    android:id="@+id/female"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/prompt_female"
                    android:textColor="@color/color_hint"/>
            </RadioGroup>
            <EditText
                android:id="@+id/nationality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawableRight="@mipmap/ic_flag_black_18dp"
                android:background="@drawable/et_states"
                android:padding="10dp"
                android:hint="@string/prompt_nationality"
                android:textColorHint="@color/color_hint"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@color/color_black_light"
                tools:ignore="RtlHardcoded" />
            <EditText
                android:id="@+id/uname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawableRight="@mipmap/ic_person_black_18dp"
                android:background="@drawable/et_states"
                android:padding="10dp"
                android:hint="@string/prompt_uname"
                android:textColorHint="@color/color_hint"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/color_black_light"
                tools:ignore="RtlHardcoded" />
            <EditText
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawableRight="@mipmap/ic_lock_black_18dp"
                android:background="@drawable/et_states"
                android:padding="10dp"
                android:hint="@string/prompt_pwd"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/color_black_light"
                android:textColorHint="@color/color_hint"
                tools:ignore="RtlHardcoded" />
            <EditText
                android:id="@+id/repwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawableRight="@mipmap/ic_lock_black_18dp"
                android:background="@drawable/et_states"
                android:padding="10dp"
                android:hint="@string/prompt_repwd"
                android:inputType="textPassword"
                android:imeActionId="@+id/reg_"
                android:imeActionLabel="@string/action_register"
                android:imeOptions="actionGo"
                android:maxLines="1"
                android:textColor="@color/color_black_light"
                android:textColorHint="@color/color_hint"
                tools:ignore="RtlHardcoded" />

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_states"
                    android:text="@string/action_register"
                    android:textColor="@color/color_white"
                    android:layout_gravity="end"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingTop="4dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/action_sign_in"
                    android:textColor="@drawable/tv_state"
                    android:textSize="20sp"
                    android:layout_alignParentTop="true"/>

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
